--- a/crm/myapp/templates/base.html
+++ b/crm/myapp/templates/base.html
@@ -29,12 +29,12 @@
                 {% block navigation %}
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'cleaning_groups' %}">
                             <i class="fas fa-users me-1"></i>Úklidové skupiny
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'money_collect' %}">
                             <i class="fas fa-hand-holding-heart me-1"></i>Veřejná sbírka
                         </a>
                     </li>
